# agent-lens

./: .gitignore  README.md  minio.env  package.json  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
.github/workflows/: docker-publish.yml  test.yml
agent_lens/: __main__.py  artifact_manager.py  embed-image-vectors.py  register-similarity-search-service.py  register_frontend_service.py  register_sam_service.py  register_sam_service_on_reef.py  register_similarity_search_on_reef.py  register_similarity_search_service.py  service_utils.py  start_services.py
agent_lens/scripts/: run_dev.sh  run_docker.sh
agent_lens/static/: style.css
agent_lens/test/: test_sam_service.py
agent_lens/tests/: test_similarity_service.py
docker/: docker-compose-agent-lens-app.yml  docker-compose.yml  dockerfile
docs/: index.html  zarr_tile_workflow.dot
frontend/: index.html  main.css  main.jsx  package.json  utils.jsx  vite.config.mjs
frontend/components/: CameraSettings.jsx  ChannelSettings.jsx  ChatbotButton.jsx  ControlButton.jsx  ControlPanel.jsx  DataManagement.jsx  ImageDisplay.jsx  (+12 more)
scripts/: add-image-vectors-for-squid.py  docker_start.sh  find-similar-images.py  main.py  register-hypha-server.py  register-hypha-service.py  register-sam-service.py  register-similarity-search-service.py  run_app.sh  run_dev.sh  run_docker.sh  sam.py  segment_cells_hpa_sample.py  setup_dev.sh  start-sam-service.py  store-image-vectors.py
src/: main.jsx
test/: test-hypha.py  test-register-hypha-server.py  test-store-image-vectors-sam.py  test_sam_service.py
(+40 files in other folders)
