[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lens"
version = "0.1.0"
description = "A description of your project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/aicell-lab/agent-lens"
repository = "https://github.com/aicell-lab/agent-lens"

[tool.setuptools.dynamic]
dependencies = ["requirements.txt"]

[tool.setuptools.packages.find]
include = ["agent_lens*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"agent_lens" = ["*.txt", "*.md"]