[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lens"
version = "0.1.0"
description = "A description of your project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "hypha_rpc",
    "hypha",
    "numpy",
    "pillow",
    "torch",
    "httpx",
    "python-dotenv",
    "fastapi",
    "aiobotocore",
]

[project.urls]
homepage = "https://github.com/aicell-lab/agent-lens"
repository = "https://github.com/aicell-lab/agent-lens"

[tool.setuptools.packages.find]
include = ["agent_lens*"]

[tool.setuptools.package-data]
"agent_lens" = ["*.txt", "*.md"]